--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,10 @@
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/eloquent-sortable": "^4.4",
         "spatie/laravel-sluggable": "^3.6",
-        "ysfkaya/filament-phone-input": "^3.1"
+        "ysfkaya/filament-phone-input": "^3.1",
+         "fakerphp/faker": "^1.24"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.24",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.39",
         "mockery/mockery": "^1.6",
