--- a/composer.json
+++ b/composer.json
@@ -11,23 +11,25 @@
         "charrafimed/global-search-modal": "^3.4",
         "cheesegrits/filament-google-maps": "3.0.15",
         "eightynine/filament-excel-import": "^3.1",
+        "fakerphp/faker": "^1.24",
         "filament/filament": "*",
         "flowframe/laravel-trend": "^0.3.0",
         "jeffgreco13/filament-breezy": "^2.3",
         "lara-zeus/popover": "^1.1",
-        "laravel/framework": "^11.9",
+        "laravel/framework": "^11",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "laraveldaily/laravel-invoices": "^4.0",
         "leandrocfe/filament-apex-charts": "^3.1",
         "livewire/livewire": "^3.5",
         "mokhosh/filament-kanban": "^2.9",
+        "psr/simple-cache": "^2.0",
+        "pxlrbt/filament-excel": "^2.4",
         "saade/filament-autograph": "^3.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/eloquent-sortable": "^4.4",
         "spatie/laravel-sluggable": "^3.6",
-        "ysfkaya/filament-phone-input": "^3.1",
-         "fakerphp/faker": "^1.24"
+        "ysfkaya/filament-phone-input": "^3.1"
     },
     "require-dev": {
         "laravel/pint": "^1.13",
